# -vietvcam

./: .gitignore  BUILD_CI.md  BUILD_ON_WSL.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: build-ios.yml
deploy/nginx/: README.md  vietvcam.conf
ios/: AppDelegate.m  ControlPanelView.h  ControlPanelView.m  LightPanelView.h  LightPanelView.m  Makefile  README_BUILD.md  RTMPPlayerManager.h  RTMPPlayerManager.m  RootViewController.m  SourcePanelView.h  SourcePanelView.m  VCamSettings.h  VCamSettings.m  VideoPreviewView.h  VideoPreviewView.m  VietVCam-Info.plist  control  entitlements.plist
packaging/debian/: control  postinst  prerm  vietvcam  vietvcam.service
packaging/sileo-rootless/DEBIAN/: control  postinst  prerm
packaging/sileo-rootless/var/jb/usr/share/vietvcam/: README.txt
scripts/: build_deb.sh  build_ios_app.sh  build_sileo_deb.sh  build_sileo_repo.sh  release.sh
src/vietvcam/: __init__.py  api.py  app.py  cli.py  config.py  control_state.py  housekeeping.py  rtmp.py
tests/: test_config.py
